2005-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/cairo/Makefile.am:
	* ext/cairo/gstcairo.c: (plugin_init):
	* ext/cairo/gsttextoverlay.c: (gst_text_overlay_base_init),
	(gst_text_overlay_class_init), (gst_text_overlay_finalize),
	(gst_text_overlay_init), (gst_text_overlay_font_init),
	(gst_text_overlay_set_property), (gst_text_overlay_render_text),
	(gst_text_overlay_getcaps), (gst_text_overlay_setcaps),
	(gst_text_overlay_text_pad_linked),
	(gst_text_overlay_text_pad_unlinked), (gst_text_overlay_shade_y),
	(gst_text_overlay_blit_1), (gst_text_overlay_blit_sub2x2),
	(gst_text_overlay_push_frame), (gst_text_overlay_pop_video),
	(gst_text_overlay_pop_text), (gst_text_overlay_collected),
	(gst_text_overlay_change_state):
	* ext/cairo/gsttextoverlay.h:
	  Port cairo textoverlay plugin to 0.9. Add 'shaded-background'
	  property and redo position. Doesn't handle upstream renegotiation
	  yet though.

2005-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_parse_stream),
	(gst_avi_demux_process_next_entry), (gst_avi_demux_stream_data),
	(gst_avi_demux_loop):
	  No need to take the STREAM_LOCK in the loop function. Improve
	  some debug messages. Don't leak pad names in debug messages.

2005-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_push_vorbis_codec_priv_data),
	(gst_matroska_demux_add_wvpk_header):
	  Don't error out when the source pad isn't linked.

2005-11-02  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gconf/gstgconfaudiosink.c: (do_toggle_element),
	(gst_gconf_audio_sink_change_state):
	* ext/gconf/gstgconfvideosink.c: (do_toggle_element),
	(gst_gconf_video_sink_change_state):
	  Fix state change functions here as well and set kid
	  to NULL state before removing it.

2005-11-01  Edward Hervey  <edward@fluendo.com>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_stop_file),